--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,7 @@ header {
     width: 80%;
     display: flex;
     justify-content: space-between;
-}
-
-.header-image {
-    margin-top: 20px;
+    padding-top: 20px;
 }
 
 .header-list {
@@ -36,7 +33,6 @@ header {
 }
 
 .header-button {
-    margin-top: 20px;
     background-color: #FF7143;
     padding-top: 10px;
     padding-left: 20px;
